# datasette-oauth

./: .gitignore  README.md  pyproject.toml
datasette_oauth/: __init__.py
datasette_oauth/templates/: oauth_authorize.html  oauth_clients.html  oauth_device_verify.html
demos/initial/: README.md
tests/: test_oauth.py
