[project]
name = "datasette-oauth"
version = "0.1a0"
description = "Datasette as an OAuth provider"
readme = "README.md"
authors = [{name = "Datasette"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a25"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datasette_oauth*"]

[tool.setuptools.package-data]
datasette_oauth = ["templates/*.html"]


[project.urls]
Homepage = "https://github.com/datasette/datasette-oauth"
Changelog = "https://github.com/datasette/datasette-oauth/releases"
Issues = "https://github.com/datasette/datasette-oauth/issues"
CI = "https://github.com/datasette/datasette-oauth/actions"

[project.entry-points.datasette]
oauth = "datasette_oauth"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

